--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div style="padding: 5rem">
-<color-picker [(ngModel)]="model" [picker-config]="config"></color-picker>
+    <color-picker [(ngModel)]="model" [pickerConfig]="config" (ngModelChange)="change($event)"></color-picker>
 </div>
